Initial commit: Aviation Safety Platform

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@portabletext/react": "^6.0.0",
+    "@portabletext/types": "^4.0.0",
+    "@sanity/client": "^7.13.2",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
