--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@portabletext/react": "^6.0.0",
     "@portabletext/types": "^4.0.0",
     "@sanity/client": "^7.13.2",
+    "@sanity/image-url": "^2.0.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
